--- a/fito/app/build.gradle
+++ b/fito/app/build.gradle
@@ -27,8 +27,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+
+    // TensorFlow dependency
+    implementation 'org.tensorflow:tensorflow-lite:2.0.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
+
+    // Image cropper dependency
+    //implementation 'com.github.yalantis:ucrop:2.2.4'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
